Use a picture element that serves either webp or png based on browser support. Use just the png for favicons just to be safe with browser support (current iOS Safari doesn't support webp). Fixed some width issues on the landing that would cause horizontal scrolling when it shouldn't.

--- a/public-src/stylesheets/landing.scss
+++ b/public-src/stylesheets/landing.scss
@@ -11,7 +11,8 @@ body {
 }
 
 main {
-    max-width: 90rem;
+    width: 90rem;
+    max-width: 95vw;
     display: flex;
     flex-direction: column;
     align-items: center;
